# researchxyz

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  onpkg.json
config/: researchxyz.example.toml
docs/: config_guide.md  tui_manual.md
onpkg_docs/: INDEX.md  content.md  core.md  design.md  implementation.md  prd.md  spec.md  todo.md
src/: app.rs  config.rs  main.rs
src/core/: agent.rs  memory.rs  mod.rs  registry.rs  types.rs
src/mcp/: client.rs  mod.rs
src/tools/: academic.rs  docgen.rs  docreader.rs  memory.rs  mod.rs  web.rs
src/tui/: draw.rs  mod.rs  theme.rs
