[package]
name = "researchxyz"
version = "0.1.4"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
ratatui = "0.30"
crossterm = { version = "0.27", features = ["event-stream"] }
tui-textarea = "0.4"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
scraper = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
genpdf = "0.2"
docx-rs = "0.4"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
chrono = "0.4"
futures = "0.3"
ppt-rs = "0.2"
rmcp = "1"
calamine = "0.35"
pdf-extract = "0.10"
percent-encoding = "2.3"
regex = "1"
ego-tree = "0.6"
inquire = "0.7"